@@ -16,7 +16,7 @@ include MusicBrainz
 # The release's MusicBrainz ID.
 # Either read it from the command line as the first
 # parameter or use a default one for demonstration.
-id = $*[0] ? $*[0] : '6785cad0-159c-40ec-9ee4-30d8745dd7f9'
+id = $*[0] ? $*[0] : 'b413313a-dfb7-485a-8f98-eb1ad2d26fe2'#'6785cad0-159c-40ec-9ee4-30d8745dd7f9'
 
 # Generate a new release MBID object from the ID:
 mbid = Model::MBID.parse(id, :release)
@@ -28,7 +28,8 @@ mbid = Model::MBID.parse(id, :release)
 release_includes = Webservice::ReleaseIncludes.new(
   :artist => true,
   :tracks => true,
-  :release_events => true
+  :release_events => true,
+  :url_rels => true
 )
 
 # Create a new Query object which will provide
@@ -47,6 +48,7 @@ print <<EOF
 ID            : #{release.id.uuid}
 Title         : #{release.title}
 Artist        : #{release.artist.unique_name}
+Cover art URL : #{release.cover_art_uri}
 Tracks        : #{release.tracks.to_a.join("\r\n                ")}
 Release Events:
 EOF
